--- a/deployments/coordinator-deployment.yaml
+++ b/deployments/coordinator-deployment.yaml
@@ -58,3 +58,39 @@ spec:
   - port: 1234
     targetPort: 1234
     protocol: TCP
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: dashboard
+  labels:
+    app: dashboard
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: dashboard
+  template:
+    metadata:
+      labels:
+        app: dashboard
+    spec:
+      containers:
+      - name: dashboard
+        image: dashboard:1
+        ports:
+        - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: dashboard
+  labels:
+    app: dashboard
+spec:
+  type: NodePort
+  selector:
+    app: dashboard
+  ports:
+    - port: 80
+      targetPort: 80
